# UEFI-SDK

./: .gitignore  CMakeLists.txt  README.md  build.sh  uefi-toolchain.cmake
SdkPkg/: SdkPkg.dec  SdkPkg.dsc  UefiApp.c  UefiApp.inf  UefiAppTarget.c  UefiShellApp.c
cmake/: UefiSdkConfig.cmake.in  createLib.sh
examples/: CMakeLists.txt  bareApp.c  build.sh  posixApp.c  shellApp.c  uefiApp.c
